# docs/swagger.yaml
@@ -72,20 +72,36 @@ paths:
       responses:
         200:
           description: ok
-  /tasks/{userId}/{level}:
+  /tasks/{level}:
     get:
       tags:
         - Task
       summary: Get random not completed user task
       parameters:
         - in: path
-          name: userId
-          type: string
-          required: true
-        - in: path
           name: level
           type: string
           required: true
+      responses:
+        200:
+          description: ok
+  /tasks/{id}/answer:
+    post:
+      tags:
+        - Task
+      summary: Check task answer
+      parameters:
+        - in: path
+          name: id
+          type: string
+          required: true
+        - in: body
+          name: body
+          schema:
+            type: object
+            properties:
+              answer:
+                type: string
       responses:
         200:
           description: ok
